--- a/intranet_client/package.json
+++ b/intranet_client/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.2.6",
     "babel-plugin-macros": "^3.1.0",
     "html-react-parser": "^3.0.8",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
