--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react-quill": "^2.0.0",
     "rrule": "^2.7.2"
   }
