--- a/intranet_client/package.json
+++ b/intranet_client/package.json
@@ -24,10 +24,12 @@
     "babel-plugin-macros": "^3.1.0",
     "html-react-parser": "^3.0.8",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "rrule": "^2.7.1",
