fix docker issue

--- a/inranet_search/Dockerfile
+++ b/inranet_search/Dockerfile
@@ -24,5 +24,8 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 # Copy the sources
 COPY ./app /code/app
 
+# Export the right profile
+ENV profile=docker
+
 # Start the application within uvicorn
 CMD ["uvicorn", "app.main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8001"]
