--- a/inranet_search/docker/docker-compose.yml
+++ b/inranet_search/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   mongo:
     image: mongo
     restart: unless-stopped
+    hostname: loki-mongo
     ports:
       - "27017:27017"
     environment:
