--- a/intranet_client/package.json
+++ b/intranet_client/package.json
@@ -22,6 +22,7 @@
     "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.2.6",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.2.3",
     "html-react-parser": "^3.0.8",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
