--- a/intranet_client/package.json
+++ b/intranet_client/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.11.13",
@@ -35,6 +37,7 @@
     "react-scripts": "^5.0.1",
     "rrule": "^2.7.2",
     "styled-components": "^5.3.9",
+    "tailwindcss": "^3.3.3",
     "tui-calendar": "^1.15.3",
     "web-vitals": "^2.1.4"
   },
